<resources>
    <!--toolbar titles-->
    <string name="app_name">WYP</string>
    <string name="settings">SETTINGS</string>
    <string name="add_new_species">ADD PLANT SPECIES</string>
    <string name="add_new_plant">ADD PLANT</string>

    <!--universal-->
    <string name="add">ADD</string>
    <string name="save">SAVE</string>

    <!--settings-->
    <string name="notifications">NOTIFICATIONS</string>
    <string name="water_notifications">Water notifications</string>
    <string name="fertilize_notifications">Fertilize notifications</string>
    <string name="notifications_time">Notifications time</string>

    <!--plant list item-->
    <plurals name="fertilizeEvery">
        <item quantity="one" formatted="true">Fertilize everyday, with %2$s</item>
        <item quantity="other" formatted="true">Fertilize every %1$d days, with %2$s</item>
    </plurals>
    <plurals name="waterEvery">
        <item quantity="one" formatted="true">Water everyday</item>
        <item quantity="other" formatted="true">Water every %1$d days</item>
    </plurals>
    <string name="hum">%1$d\%%</string>
    <string name="temp">%1$d°C</string>
    <string name="temp2">From %1$d°C to %2$d°C</string>
    <string name="plants_nickname">plants nickname</string>

    <!--plant list item popup menu-->
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_delete">Delete</string>

    <!--add new userPlant-->
    <string name="add_plant">Add Plant</string>
    <string name="add_a_nickname">Add a nickname</string>
    <string name="add_species_button">add species</string>

    <!--add new plant species-->
    <string name="species_name">Species name</string>
    <string name="plant_type">Plant type:</string>
    <string name="best_temperature_range">Preferable temperature range:</string>
    <string name="preferable_light">Preferable light:</string>
    <string name="preferable_humidity">Preferable humidity: %1$d\%%</string>
    <string name="watering_frequency_days">Watering frequency (days)</string>
    <string name="fertilizing_frequency_days">Fertilizing frequency (days)</string>
    <string name="iconlight1">Icon light 1</string>
    <string name="iconlight5">Icon light 5</string>


</resources>